--- a/misc/elrte/src/elrte.src.html
+++ b/misc/elrte/src/elrte.src.html
@@ -107,9 +107,9 @@
 	<script src="elrte/js/ui/about.js" type="text/javascript" charset="utf-8"></script>
 
 	<!-- elFinder -->
-	<link rel="stylesheet" href="../../elfinder/css/elfinder.css" type="text/css" media="screen" charset="utf-8">
-	<script src="../../elfinder/js/elfinder.full.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../../elfinder/js/i18n/elfinder.ru.js" type="text/javascript" charset="utf-8"></script>
+	{*<link rel="stylesheet" href="../../elfinder/css/elfinder.css" type="text/css" media="screen" charset="utf-8">*}
+	{*<script src="../../elfinder/js/elfinder.full.js" type="text/javascript" charset="utf-8"></script>*}
+	{*<script src="../../elfinder/js/i18n/elfinder.ru.js" type="text/javascript" charset="utf-8"></script>*}
 
 
 
@@ -198,7 +198,7 @@
 
 		});
 	</script>
-	
+
 	<style type="text/css" media="screen">
 		body { padding: 0 20px; }
 		.button { display:inline-block; border:1px solid #ccc; background:#eee; padding:5px; margin:10px; }
@@ -252,7 +252,7 @@ DOUGLAS ADAMS - The Hitchhiker's Guide to the Galaxy</h2>
 				<img src="elrte/images/media-director.png" alt="Marvin">
 				<!-- pagebreak -->
 <b>Вот что сообщает <a href="http://google.com">Галактический Путеводитель</a> на предмет <span style="background-color: rgb(255, 255, 153);">полотенец</span>:</b>
-Полотенце, возможно, самый необходимый предмет ! для межзвездного путешественника. Оно имеет некоторую практическую ценность - вы можете: завернуться в него, чтобы согреться, прыгая по холодным лунам Джаглан-Беты; использовать его, как подстилку,лежа на мраморном песке пляжей Сантрагинуса V и вдыхая пьянящий морской воздух;  спать на нем под огненно-красными звездами на пустынной планете Какрафун; сделать из него парус, чтобы спуститься на плоту по ленивой реке Мотт; намочить его и завязать узлом, чтобы использовать, как оружие в рукопашной; обвязать им голову, чтобы избежать ядовитого дыма или взгляда Прожорного Заглотозавера с Трааля 
+Полотенце, возможно, самый необходимый предмет ! для межзвездного путешественника. Оно имеет некоторую практическую ценность - вы можете: завернуться в него, чтобы согреться, прыгая по холодным лунам Джаглан-Беты; использовать его, как подстилку,лежа на мраморном песке пляжей Сантрагинуса V и вдыхая пьянящий морской воздух;  спать на нем под огненно-красными звездами на пустынной планете Какрафун; сделать из него парус, чтобы спуститься на плоту по ленивой реке Мотт; намочить его и завязать узлом, чтобы использовать, как оружие в рукопашной; обвязать им голову, чтобы избежать ядовитого дыма или взгляда Прожорного Заглотозавера с Трааля
 	</div>
 	<input type="submit" name="" value="go" id="">
 	</form>
